@@ -8,6 +8,7 @@ brot2 (1.2~unreleased) UNRELEASED; urgency=low
   * Update build machinery for automake 1.15 & gcc 5.3
   * Fix default save directory (LP#1600657)
   * Remember the last directory we saved in (LP#1600568)
+  * Apply aspect ratio fix when saving PNG (LP#1600574)
 
  -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Mon, 11 Jul 2016 13:10:02 +1200
 
